Fixed issues found by local analysis